--- a/apps/docs/src/content/docs/python-sdk/sync/sandbox.mdx
+++ b/apps/docs/src/content/docs/python-sdk/sync/sandbox.mdx
@@ -41,7 +41,7 @@ Represents a Daytona Sandbox.
 - `build_info` _str_ - Build information for the Sandbox if it was created from dynamic build.
 - `created_at` _str_ - When the Sandbox was created.
 - `updated_at` _str_ - When the Sandbox was last updated.
-- `network_allow_all` _bool_ - Whether to allow all network access for the Sandbox.
+- `network_block_all` _bool_ - Whether to block all network access for the Sandbox.
 - `network_allow_list` _str_ - Comma-separated list of allowed network addresses for the Sandbox
   (only /24 CIDR blocks allowed).
 
