--- a/apps/docs/src/content/docs/typescript-sdk/daytona.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/daytona.mdx
@@ -343,8 +343,8 @@ Base parameters for creating a new Sandbox.
 - `envVars?` _Record\<string, string\>_ - Optional environment variables to set in the Sandbox
 - `labels?` _Record\<string, string\>_ - Sandbox labels
 - `language?` _string_ - Programming language for direct code execution
-- `networkAllowAll?` _boolean_ - Whether to allow all network access for the Sandbox
 - `networkAllowList?` _string_ - Comma-separated list of allowed network addresses for the Sandbox (only /24 CIDR blocks allowed)
+- `networkBlockAll?` _boolean_ - Whether to block all network access for the Sandbox
 - `public?` _boolean_ - Is the Sandbox port preview public
 - `user?` _string_ - Optional os user to use for the Sandbox
 - `volumes?` _VolumeMount\[\]_ - Optional array of volumes to mount to the Sandbox
@@ -362,8 +362,8 @@ Parameters for creating a new Sandbox.
     the image will be dynamically built.
 - `labels?` _Record\<string, string\>_
 - `language?` _string_
-- `networkAllowAll?` _boolean_
 - `networkAllowList?` _string_
+- `networkBlockAll?` _boolean_
 - `public?` _boolean_
 - `resources?` _Resources_ - Resource allocation for the Sandbox. If not provided, sandbox will
     have default resources.
@@ -381,8 +381,8 @@ Parameters for creating a new Sandbox from a snapshot.
 - `envVars?` _Record\<string, string\>_
 - `labels?` _Record\<string, string\>_
 - `language?` _string_
-- `networkAllowAll?` _boolean_
 - `networkAllowList?` _string_
+- `networkBlockAll?` _boolean_
 - `public?` _boolean_
 - `snapshot?` _string_ - Name of the snapshot to use for the Sandbox.
 - `user?` _string_
