refactor: accept all CIDR prefixes for network whitelist
Signed-off-by: fabjanvucina <fabjanvucina@gmail.com>

--- a/apps/docs/src/content/docs/typescript-sdk/daytona.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/daytona.mdx
@@ -343,7 +343,7 @@ Base parameters for creating a new Sandbox.
 - `envVars?` _Record\<string, string\>_ - Optional environment variables to set in the Sandbox
 - `labels?` _Record\<string, string\>_ - Sandbox labels
 - `language?` _string_ - Programming language for direct code execution
-- `networkAllowList?` _string_ - Comma-separated list of allowed network addresses for the Sandbox (only /24 CIDR blocks allowed)
+- `networkAllowList?` _string_ - Comma-separated list of allowed CIDR network addresses for the Sandbox
 - `networkBlockAll?` _boolean_ - Whether to block all network access for the Sandbox
 - `public?` _boolean_ - Is the Sandbox port preview public
 - `user?` _string_ - Optional os user to use for the Sandbox
