--- a/apps/docs/src/content/docs/typescript-sdk/sandbox.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/sandbox.mdx
@@ -118,7 +118,7 @@ Represents a Daytona Sandbox.
     ```ts
     SandboxDto.memory
     ```
-- `networkAllowList?` _string_ - Comma-separated list of allowed network addresses for the Sandbox (only /24 CIDR blocks allowed)
+- `networkAllowList?` _string_ - Comma-separated list of allowed CIDR network addresses for the Sandbox
     
     ##### Implementation of
     
