--- a/apps/docs/src/content/docs/python-sdk/async/async-daytona.mdx
+++ b/apps/docs/src/content/docs/python-sdk/async/async-daytona.mdx
@@ -475,8 +475,7 @@ Base parameters for creating a new Sandbox.
   Negative value means disabled, 0 means delete immediately upon stopping.
 - `volumes` _Optional[List[VolumeMount]]_ - List of volumes mounts to attach to the Sandbox.
 - `network_block_all` _Optional[bool]_ - Whether to block all network access for the Sandbox.
-- `network_allow_list` _Optional[str]_ - Comma-separated list of allowed network addresses for the Sandbox
-  (only /24 CIDR blocks allowed).
+- `network_allow_list` _Optional[str]_ - Comma-separated list of allowed CIDR network addresses for the Sandbox.
 
 ## CreateSandboxFromImageParams
 
