--- a/apps/docs/src/content/docs/python-sdk/async/async-sandbox.mdx
+++ b/apps/docs/src/content/docs/python-sdk/async/async-sandbox.mdx
@@ -42,8 +42,7 @@ Represents a Daytona Sandbox.
 - `created_at` _str_ - When the Sandbox was created.
 - `updated_at` _str_ - When the Sandbox was last updated.
 - `network_block_all` _bool_ - Whether to block all network access for the Sandbox.
-- `network_allow_list` _str_ - Comma-separated list of allowed network addresses for the Sandbox
-  (only /24 CIDR blocks allowed).
+- `network_allow_list` _str_ - Comma-separated list of allowed CIDR network addresses for the Sandbox.
 
 #### AsyncSandbox.\_\_init\_\_
 
