--- a/apps/docs/src/content/docs/tools/cli.mdx
+++ b/apps/docs/src/content/docs/tools/cli.mdx
@@ -238,8 +238,8 @@ __Flags__
 | `--gpu` |  | GPU units allocated to the sandbox |
 | `--label` | `-l` | Labels (format: KEY=VALUE) |
 | `--memory` |  | Memory allocated to the sandbox in MB |
-| `--network-allow-all` |  | Whether to allow all network access for the sandbox |
-| `--network-allow-list` |  | Comma-separated list of allowed network addresses for the sandbox (only /24 CIDR blocks allowed) |
+| `--network-block-all` |  | Whether to block all network access for the sandbox |
+| `--network-allow-list` |  | Comma-separated list of allowed CIDR network addresses for the sandbox |
 | `--public` |  | Make sandbox publicly accessible |
 | `--snapshot` |  | Snapshot to use for the sandbox |
 | `--target` |  | Target region (eu, us) |
