--- a/examples/jupyter/daytona.ipynb
+++ b/examples/jupyter/daytona.ipynb
@@ -145,7 +145,8 @@
     "    print(f\"Output: {execCommand2.output}\\n\")\n",
     "\n",
     "logs = sandbox.process.get_session_command_logs(exec_session_id, execCommand2.cmd_id)\n",
-    "print(f\"Logs: {logs}\")"
+    "print(f\"Logs stdout: {logs.stdout}\")\n",
+    "print(f\"Logs stderr: {logs.stderr}\")"
    ]
   },
   {
